[package]
name = "poker-stats"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

rand = "0"

array-init = "2"
itertools = "0.10.5"
clap = {version = "4.3.8", features = [ "derive" ]}
rayon = {version = "1.7.0"}